fix: overflow-y

--- a/src/components/MovieSimilar.scss
+++ b/src/components/MovieSimilar.scss
@@ -18,7 +18,6 @@
 }
 
 .movies {
-  overflow-y: scroll;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
